<resources>
    <string name="app_name">CombineAssignment</string>
    <string name="hello1"> CombineAssignment </string>
    <string name="hello2"> PULLMAN SHARJAH </string>
    <string name="hello3"> Delux Room - Starting 500.00 AED OR 5000 PTS </string>
    <string name="hello4"> Occupancy : 2 adults + 1 child</string>
    <string name="hello5"> Executive Suite - Starting 900.00 AED OR 9000 PTS</string>
    <string name="hello6"> Occupancy: 2 adults + 2 child</string>
    <string name="hello7"> Deluxe Room </string>
    <string name="hello8"> The 48 sqm. deluxe rooms surprise with sophistication. unwind with a spacious bathtub, 55-inch LED TV and premiunm bedding. Take it all in with views of Sharjahs sparkling lagoon. Refuel at any time with the coffee station and minibar. Or get down to bussiness with the workspace and seamless Wi-Fi access. </string>
    <string name="hello9"> AMENITIES </string>
    <string name="hello10"> Airport Pick-up </string>
    <string name="hello11"> Hi-Speed Wifi</string>
    <string name="hello12"> Luggage Storage</string>
    <string name="hello13"> Room Service</string>
    <string name="hello14"> Suitable For </string>
    <string name="hello15">Available Rooms </string>
    <string name="hello16">Rooms </string>
    <string name="hello17">Select No. of Rooms</string>
    <string name="hello18">DETAILS</string>
    <string name="hello19">LOCATION</string>
    <string name="hello20">TCs</string>
    <string name="hello21">PROCEED</string>
    <string name="hello22">1. As per UAE law, guests are required to present an original, valid ID (UAE National ID) or Passport in order to have a smooth check-in. Please note that all Special Request are subject to availability and additional charges may apply. </string>
    <string name="hello23">2.Check-in time 3:00pm and Check-out time 12:00pm.</string>
    <string name="hello24">3.Meals are not included in the stay booking unless specified otherwise.</string>
    <string name="hello25">4.Standard cancellation rules apply.</string>
    <string name="hello26"> HOSPITAL </string>
    <string name="hello27"> Dental Offers </string>
    <string name="hello28"> Facial Offers </string>
    <string name="hello29"> Laser Offers </string>
    <string name="hello30"> Filler Offers </string>
    <string name="hello31"> FLAT 50% DISCOUNT ON DENTAL CHECK UP</string>
    <string name="hello32"> Flat 50% Discount on dental treatment</string>
    <string name="hello33"> Flat 50% Discount on dental check up at Sabka Dentist. Free Dental check-up. Free X-ray.Free consultation. Teeth cleaning and polishing at Rs.300(original price at clinic Rs.675) </string>
    <string name="hello34"> Price </string>
    <string name="hello35"> 500.00AED OR 10000PTS Excluding 5% VAT</string>
    <string name="hello36">Estimated Savings 20AED</string>
    <string name="hello37">Valid till</string>
    <string name="hello38">30th Apr 2021</string>
    <string name="hello39">Select Quantity</string>
    <string name="hello40">Payment will be made only through Paytm</string>
    <string name="hello41">Offer is valid only for one person, one sitting only.</string>
    <string name="hello42">Cannot be clubbed with any other offer</string>
    <string name="hello43">Offer can be used at any of the 110 Sabka dentist clinics across 6 cities.</string>
    <string name="hello44">Offer valid upto 31st March,2017 only</string>
    <string name="hello45">Prior appointment is mandatory.</string>
    <string name="hello46">To book appointment at any Sabka dentist clinics,call on 02264648484.</string>
    <string name="hello47">BUY NOW</string>
    <string name="hello48">DENTAL OFFERS</string>
    <string name="hello49">Payment</string>
    <string name="hello50">Pay With Card </string>
    <string name="hello51">Pay with card and earn points</string>
    <string name="hello52">Pay With Points + Card</string>
    <string name="hello53">Available Points 2,288,071PTS</string>
    <string name="hello54">525.00 AED OR 10500PTS</string>

</resources>