<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PaymentActivity">

    <TextView
        android:id="@+id/paymentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello48"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"/>

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/red"
        android:layout_marginTop="5dp"
        android:layout_below="@id/paymentTitle"/>

    <ImageView
        android:id="@+id/paymentImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/dental"
        android:layout_below="@id/view8"/>
    <TextView
        android:id="@+id/Payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/paymentImage"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/hello49"
        android:textColor="@color/red"/>

    <ImageView
        android:id="@+id/image1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/Payment"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_baseline_credit_card_24"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/payCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Payment"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/hello50" />
    <TextView
        android:id="@+id/paycard1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/payCard"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/hello51"/>
    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Payment"
        android:layout_marginLeft="330dp"/>

    <View
        android:id="@+id/view10"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="5dp"
        android:layout_below="@id/radio1"/>

    <ImageView
        android:id="@+id/image2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/view10"
        android:layout_marginTop="15dp"
        android:background="@drawable/medal"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/paypoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view10"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/hello52" />

    <TextView
        android:id="@+id/paypointtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/paypoint"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/hello53"/>

    <RadioButton
        android:id="@+id/radio2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view10"
        android:layout_marginLeft="330dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio2"
        android:background="@color/lite"
        android:layout_marginTop="100dp">

    <TextView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_marginRight="200dp"/>

        <Button
            android:id="@+id/finalw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lite"
            android:layout_marginLeft="220dp"
            android:layout_marginRight="30dp"
            android:text="@string/hello21"/>

    </RelativeLayout>
</RelativeLayout>