<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hello2"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textStyle="italic"
                android:textSize="20sp"/>


            <androidx.viewpager2.widget.ViewPager2
                android:orientation="horizontal"
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/title"/>



          <!--  <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_below="@id/title"
                android:layout_marginTop="5dp"/>-->

            <TextView
                android:id="@+id/DeluxRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello7"
                android:textColor="@color/red"
                android:layout_below="@id/view_pager"/>

            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/DeluxRoom"
                android:layout_marginTop="5dp"
                android:hint="Read More" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="3dp"
                android:layout_below="@id/details"/>

          <TextView
              android:id="@+id/AMenities"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@id/view1"
              android:layout_marginTop="10dp"
              android:textColor="@color/red"
              android:text="@string/hello9"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/AMenities"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/RecyclerView"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/suitable"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/hello14"
                    android:textSize="15sp"
                    app:layout_constraintRight_toLeftOf="@id/AdultQ"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/AdultQ"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/suitable"
                    app:layout_constraintRight_toLeftOf="@id/AdultLogo"
                    android:gravity="end"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/AdultLogo"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintLeft_toRightOf="@id/AdultQ"
                    app:layout_constraintRight_toLeftOf="@id/ChildQ"
                    android:background="@drawable/ic_baseline_person_outline_24"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/ChildQ"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    app:layout_constraintLeft_toRightOf="@id/AdultLogo"
                    app:layout_constraintRight_toLeftOf="@id/ChildLogo"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/ChildLogo"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintLeft_toRightOf="@id/ChildQ"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/ic_baseline_person_outline_24"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@id/constraint2">

                <TextView
                    android:id="@+id/Available"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/hello15"
                    android:textSize="15sp"
                    app:layout_constraintRight_toLeftOf="@id/availableRoom"
                    tools:ignore="MissingConstraints" />
                <TextView
                    android:id="@+id/availableRoom"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/Available"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="end"
                    tools:ignore="MissingConstraints" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp"
                android:layout_below="@id/constraint3"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@id/view">

                <TextView
                    android:id="@+id/Selectroom"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:ignore="MissingConstraints"
                    android:text="@string/hello17"
                    android:textSize="15sp"
                    android:gravity="fill_vertical"
                    android:layout_marginLeft="10dp"/>

                <Button
                    android:id="@+id/minus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:onClick="decrement"
                    app:layout_constraintLeft_toRightOf="@id/Selectroom"
                    app:layout_constraintRight_toLeftOf="@id/number"
                    android:background="@drawable/ic_baseline_indeterminate_check_box_24"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    app:layout_constraintLeft_toRightOf="@id/minus"
                    app:layout_constraintRight_toLeftOf="@id/plus"
                    android:inputType="number"
                    android:text="0"
                    android:gravity="center"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/plus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:onClick="increment"
                    app:layout_constraintLeft_toRightOf="@id/number"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/ic_baseline_add_box_24"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/vieww"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp"
                android:layout_below="@id/constraint4"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/vieww"/>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/tab_layout"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/buyNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pager"
                android:text="@string/hello21"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>